# blog-on-flask

./: README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt  wsgi.py
blog/: app.py  configs.py  db.sqlite  security.py
blog/api/: __init__.py  article.py  author.py  tag.py  user.py
blog/articles/: forms.py  models.py  views.py
blog/auth/: forms.py  views.py
blog/authors/: models.py  views.py
blog/models/: __init__.py  user.py
blog/permissions/: users.py
blog/schemas/: __init__.py  article.py  author.py  tag.py  user.py
blog/static/css/: cover.css  paginator.css  styles.css
blog/templates/: base.html  index.html
blog/templates/articles/: add_article.html  article_detail.html  articles.html  update_article.html
blog/templates/auth/: login.html  register.html
blog/templates/authors/: author_detail.html  authors.html
blog/templates/macro/: formhelpers.html
blog/templates/users/: user_detail.html  users.html
blog/users/: forms.py  models.py  views.py
migrations/versions/: 3fdbb1178f6a_.py  487b9a52f6d8_add_date_create_field_to_article_model.py  4d1e021182e9_.py  a9865dda763a_.py  bdea906c83c7_.py  dcbe3c4d21aa_.py  e7ed012e04fd_.py
